# TETRA-DSV_M

./: README.md
Joy_tetra/: README.md  package.xml
iahrs_driver-master/: package.xml
iahrs_driver-master/src/: iahrs_driver.cpp
realsense-ros/realsense2_camera/launch/: rs_pointcloud_front.launch  rs_pointcloud_l.launch  rs_pointcloud_r.launch
sh_files/: update.sh
tetraDS/: CMakeLists.txt  README.md  package.xml
tetraDS/cfg/: tetra.cfg
tetraDS/include/: rs232_common.c  rs232_common.h
tetraDS/src/: drive_module.c  drive_module.h  dssp_rs232_drive_module.c  dssp_rs232_drive_module.h  tetraDS.cpp
tetraDS_2dnav/: README.md  gmapping.rviz  package.xml  view_navigation.rviz
tetraDS_2dnav/config/: costmap_common_params.yaml  costmap_common_params_bak.yaml  global_costmap_params.yaml  global_costmap_params_bak.yaml  local_costmap_params.yaml  local_costmap_params_bak.yaml  teb_local_planner_params.yaml
tetraDS_2dnav/launch/: DepthimageToScan.launch  amcl.launch.xml  move_base_tetra.launch  teb_move_base.launch  tetra_configuration.launch
tetraDS_2dnav/maps/: 229588d0-e989-11ed-893b-9918bf0b6878.pgm  229588d0-e989-11ed-893b-9918bf0b6878.yaml  4c65cf10-efd0-11ed-949e-f5b923b70ab6.yaml  PICKSYSAMR.pgm  PICKSYSAMR.yaml  e4539df0-ef0a-11ed-929a-b14a7e628832.pgm  e4539df0-ef0a-11ed-929a-b14a7e628832.yaml
tetraDS_TCP/: CMakeLists.txt  README.md  package.xml  tetraDS_TCP_IP매뉴얼_240125.xlsx
tetraDS_TCP/src/: tetraDS_TCP.cpp
tetraDS_TCP/srv/: manual_backmove.srv
tetraDS_description/: README.md  package.xml
tetraDS_description/urdf/tetraDS/: base.urdf.xacro  tetraDS.xacro  tetraDS_bak.xacro
tetraDS_interface/: README.md  package.xml
tetraDS_interface/src/: dssp_rs232_power_module.c  dssp_rs232_power_module.h  power_module.c  power_module.h  tetraDS_interface.cpp
tetraDS_landmark/: README.md  package.xml
tetraDS_service/: CMakeLists.txt  README.md  package.xml
tetraDS_service/src/: tetraDS_service.cpp
tetra_docking/: CMakeLists.txt  package.xml
tetra_docking/action/: DockRobot.action  UndockRobot.action
tetra_docking/launch/: tetra_docking.launch
tetra_docking/src/: test.cpp  tetra_docking.cpp
timed_roslaunch/launch/: timed_roslaunch.launch
timed_roslaunch/scripts/: timed_roslaunch.sh
usb_cam-develop/src/: usb_cam.cpp
